src/App.css
@import '~antd/dist/antd.css';

:root {
  --weverseGreen: #84FAB0;
  --weverseBlue: #8FD3F4;
  --weversePurple:#9E90F2;
  --weverseBlack:#2E2E2E;
  --weverseGrey:#c4c4c4;
}

.text-white{
  font-family: 'Roboto Mono', monospace;
  color:white;
}
.text-grey{
  font-family: 'Roboto Mono', monospace;
  color:var(--weverseGrey);
}
.text-purple{
  font-family: 'Roboto Mono', monospace;
  color:var(--weversePurple);
}

.btn-hover-white{
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
}
.btn-hover-white:hover{
  border-style: solid;
  border-width: 1px;
  border-color: white;
}
.btn-hover-purple{
  background-color: rgba(158,144,242,0);
}
.btn-hover-purple:hover{
  background-color: rgba(158,144,242,0.2);
}

body{
  background-color: var(--weverseBlack);
}

/* RWD Container */
.container {
    width: 100vw; 
    display: flex;
    align-self: center;
    margin: auto;
    background-color: var(--weverseBlack);
}

/* sm */
@media (min-width: 576px) { 
  
} 

/* md */
@media (min-width: 768px) {
  
} 

/* lg */
@media (min-width: 992px) {
  
} 

/* xl */
@media (min-width: 1200px) {
  
} 

/* xxl */
@media (min-width: 1600px) {
  
} 

.main-layout {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width:100vw;
}

.layout-header,
.layout-footer {
  padding: 0;
  height: auto;
  background-color: var(--weverseBlack);
}

.layout-content{
  padding: 0;
  height: auto;
  background-color: var(--weverseBlack);
  
  display: flex;
  flex-direction: row;
}

.layout-content-gradient{
  display: flex;
  flex-direction: row;
  background: linear-gradient(180deg, rgba(132,250,176,0.20351890756302526) 30%, rgba(143,211,244,0.2147233893557423) 84%);
}

/* header */
.header {
  display: flex;
  text-align: center;
  align-items: center;
  align-content: center;
  justify-content: space-between;
  background-color: var(--weverseBlack);
  height:70px;
  line-height: 70px;
  border-bottom: white;
  border-style: solid;
  border-width: 0px;
}

.header-wrap-left,.header-wrap-right,.header-wrap-middle {
  display: flex;
  flex-direction: row;
  padding-top: 0rem;
  position: relative;
}

.header-wrap-left{
  width:20%;
}
.header-wrap-right{
  width:20%;
  padding-right:2rem;
  justify-content: flex-end;
}
.header-wrap-middle{
  font-family: 'Nova Round', cursive;
  font-size: 36px;
  background: linear-gradient(90deg, var(--weverseGreen) 20%, var(--weverseBlue) 84%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}


.hr-header-line {
  width: 100;
  border:0;
  height: 1px;
  background-color: white;
  opacity: 1;
  margin: 0;
}

.header-cart-summary {
  /* position: absolute; */
  /* bottom: -15px;
  right: 1rem; */
  
  /* background-color: aquamarine; */
  display:flex;
  margin:1.2rem 0rem;
  height:30px;
  pointer-events: none;
}

.icon-user{
  display:block;
}

@media (max-width: 768px){
  .icon-user{
    display:none;
  }
  .header-wrap-right{
    width:20%;
    padding-right:1.5rem;
    justify-content: flex-end;
  }
}





/* icon */
.anticon, .anticon-close ,.ant-modal-close-icon{
  color:white
}


.header-icon{
  height:70px;
  display: flex;
  align-items: center;
  font-size: 24px;
  margin-left:2rem;
  color:var(--weverseBlue);
  /* margin-right:2rem; */
  /* color: black; */
}
.header-icon:hover{
  height:70px;
  display: flex;
  align-items: center;
  font-size: 24px;
  margin-left:2rem;
  color:var(--weverseGreen);
  /* margin-right:2rem; */
  /* color: black; */
}

.header-icon a{
  color:var(--weverseBlue)
}
.header-icon .ant-icon:hover{
  color:var(--weverseGreen)
}
.header-icon .ant-icon:active{
  color:var(--weverseBlue)
}

.header-wrap-right a{
  color:var(--weverseBlue)
}
.header  a:hover {
  color: var(--weverseGreen);
}
.header  a:active {
  color: var(--weverseBlue);
}
.navnar-pagelist a{
  color:white;
}
.navnar-pagelist  a:hover {
  color: var(--weversePurple);
}
.navnar-pagelist  a:active {
  color: white;
}
.cart-check a{
  color:white
}
.cart-check  a:hover {
  color: white
}
.cart-check  a:active {
  color: white
}

.header-cart-summary .header-icon{
  height:30px;
  display: flex;
  align-items: center;
  font-size: 24px;
  margin-left:2rem;
  color:var(--weverseBlue);
  pointer-events: all;
  cursor: pointer;
  /* margin-right:2rem; */
  /* color: black; */
}
.header-cart-summary .header-icon:hover{
  color:var(--weverseGreen);
  pointer-events: all;
  cursor: pointer;
  /* margin-right:2rem; */
  /* color: black; */
}

@media (max-width: 768px){
  .header-icon{
    height:70px;
    display: flex;
    align-items: center;
    font-size: 24px;
    margin-left:1.5rem;
    color:var(--weverseBlue);
    /* margin-right:2rem; */
    /* color: black; */
  }
  .header-icon:hover{
    /* height:70px; */
    display: flex;
    align-items: center;
    font-size: 24px;
    margin-left:1.5rem;
    color:var(--weverseGreen);
    /* margin-right:2rem; */
    /* color: black; */
  }
}



/* Navbar */

.Navbar{
  height:100%;
  width:0rem;
  padding:1.5rem;
  overflow-y: auto;
  border:0;
  border-color: white;
  border-right-width:1px;
  border-style: solid;
  opacity: 1;
  display: block;
}

.Navbar.active {
  width :0;
  overflow: hidden;
  transition: 350ms;
}

.navnar-pagelist{
  padding-left:1rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.navbar-pagelist-text{
  font-family: 'Roboto Mono', monospace;
  font-size: 16px;
  line-height: 28px;
}






.navbar-line{
  height:0.1px;
  min-height: 0.1px;
  width:100%;
  background-color: white;
  margin-top:2rem;
  margin-bottom: 2rem;
}

.navbar-artistlist{
  width:100%;
  padding-left:0rem;
}

.navbar-artistlist-text{
  font-family: 'Roboto Mono', monospace;
  font-size: 16px;
  color:white;
}

.navbar-artistlist-topic{
  display: flex;
  flex-direction: row;
  align-items: center;
  padding:0.5rem;
  padding-left: 1rem;
}
/* ... */

